@@ -128,3 +128,14 @@ searchstore_querydelay: 10
 // Maximum amount of results a store search query may yield, before
 // it is canceled.
 searchstore_maxresults: 30
+
+// Whether or not gaining and loosing of cash points is displayed (Note 1).
+// Default: no
+cashshop_show_points: no
+
+// Whether or not mail box status is displayed upon login.
+// Default: 0
+// 0 = No
+// 1 = Yes
+// 2 = Yes, when there are unread mails
+mail_show_status: 0
